# cardinal

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  dcache_rem.py  output.txt  setup_dev_env.sh
gpu/: CONFIG.md  QUICK_REFERENCE.md  README.md  README_SWEEPS.md  README_SWEEP_PLAN.md  README_TESTS.md  bits.py  config.py  config.toml  hex_bin_converter.py  main.py  memsim.hex  parquet_to_csv.py  pyproject.toml  setup.py  sweep_cases.toml  sweep_cases_phase_a.toml  sweep_cases_phase_b.toml  sweep_cases_phase_c.toml  test_cardinal.py  validate_config.py
gpu/assembler/: assembler.py  opcodes.txt  output.hex
gpu/common/: custom_enums.py  custom_enums_multi.py  dump_array_to_file.py
gpu/config/sweeps/: baseline.toml  dcache_16kb_2b8w_icache_64kb.toml  dcache_16kb_4b4w_icache_64kb.toml  dcache_16kb_8b2w_icache_64kb.toml  dcache_4kb_8b2w_icache_64kb.toml  dcache_64kb_2b8w_icache_64kb.toml  dcache_64kb_8b2w_icache_64kb.toml  dcache_hitlat4.toml  dcache_hitlat8.toml  phase_b_gto_ldstq16.toml  phase_b_gto_ldstq32.toml  phase_b_gto_ldstq64.toml  phase_b_rr_ldstq16.toml  (+9 more)
gpu/emulator/: Makefile  test.sh  test_hex.sh
gpu/gpu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gpu/mod_1/: simple_pipeline.py  simple_stage.py  simple_warp_pipeline.py  skeleton_pipeline.py
gpu/raster_1/: base_class.py  bits.py  early_z.py  hardware_lib.py  input.py  z_cache.py
gpu/simulator/: .env  __init__.py  base_class.py  requirements.txt  setup.py
gpu/src/: base_class.py  simple_isa.py
gpu/tests/: config.py
gpu/texture_1/: texture_control.py  texture_filter.py
(+879 files in other folders)
